--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.11",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "connected-react-router": "^6.8.0",
     "dotenv": "^8.2.0",
